force-app/main/default/objects/Planned_Gift_Matches__c/fields/Match_Amount__c.field-meta.xml
<CustomField>
    <fullName>Match_Amount__c</fullName>
    <description>The dollar amount of the match.</description>
    <inlineHelpText>The dollar amount of the match.</inlineHelpText>
    <label>Match Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>