force-app/main/default/objects/Planned_Gift_Matches__c/fields/Match_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Match_Gift_Amount__c</fullName>
    <description>The amount of the gift being matched</description>
    <inlineHelpText>The amount of the gift being matched</inlineHelpText>
    <label>Match Gift Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>