force-app/main/default/objects/Planned_Gift_Matches__c/fields/Match_type__c.field-meta.xml
<CustomField>
    <fullName>Match_type__c</fullName>
    <label>Match type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Increase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>