force-app/main/default/objects/Planned_Gift_Matches__c/fields/Planned_Gift__c.field-meta.xml
<CustomField>
    <fullName>Planned_Gift__c</fullName>
    <label>Planned Gift</label>
    <referenceTo>Planned_Gift__c</referenceTo>
    <relationshipLabel>Planned Gift Matches</relationshipLabel>
    <relationshipName>Planned_Gift_Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>